2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: allow requirements for compilers (mostly dummy)
	Most of the new requirements that are now accepted in `$required'
	as consequence of this patch are still dummy.  They are planned
	to be implemented only in master (or in some derived branch), but
	having them here (even just as no-op) will allow for an easier
	integration/backporting of potential new testcases.
	* tests/defs.in (cc, c++, fortran, fortran77): New requirements,
	still dummy.
	(flex): New requirement, picking LEX for configure.
	(lex): New requirement, alias for `flex'.  A more appropriate
	implementation, looking for a generic `lex' program, will follow
	in the future.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: 'silent-many-gcc.test' improved and made more robust
	* tests/silent-many-gcc.test:  Also force "fast" gcc depmode
	for C++ compilations.  Add sanity checks verifying that the
	cache variables we force are really used by configure.  Fix
	typo in comments.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: drop useless requirements of 'g++'
	* tests/lflags2.test ($required): Remove 'g++', as any working
	C++ compiler should be enough, and ./configure will cause the
	test to skip if no working C++ compiler is found.
	* tests/yflags2.test: Likewise.
	* tests/subobj9.test: Likewise.
	* tests/silentcxx.test: Likewise.  Also, do not force depmodes
	that could cause non-GNU C++ compilers to fail.
	* tests/silentcxx-gcc.test: New test, like `silentcxx.test',
	but forcing "fast" gcc depmode (and thus requiring the GNU C++
	compiler).
	* tests/specflg10.test: Add proper "fixme" comment telling that
	we should make this test work with a generic C++ compiler.
	* tests/Makefile.am (TESTS): Update.

2011-05-03  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: one more environment sanitization (corner case)
	* tests/defs (am__using_gmake): Initialize.  The `using_gmake'