@@ -15,6 +15,8 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # Test for PR/322.
+# Automake 1.6.1 seems to have a problem parsing comments that use
+# '\' to span multiple lines.
 
 . ./defs || Exit 1
 
@@ -62,3 +64,5 @@ $AUTOMAKE
 $MAKE
 grep '# SOME_FILES' Makefile
 grep '# *file3' Makefile
+
+:
