@@ -16,6 +16,12 @@
 
 # Check that the DejaGnu rules work for a simple program and test case.
 # Also check PR 488: Failure of the first of several tools tested.
+# From the original bug report:
+# ``If you use dejagnu for testing and have multiple tools (i.e.,
+#   multiple entries in the DEJATOOL variable) then the success/failure
+#   of "make check" is only dependent on the success/failure of the
+#   tests on the final tool. Thus there may be failures in the tests on
+#   previous tools, but at first glance "make check" has passed.''
 
 required=runtest
 . ./defs || Exit 1
