@@ -15,6 +15,10 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # Test for PR 203.
+# == Report ==
+# Some standard targets are missing `-local' hooks.  For instance,
+# installdirs is missing this.  Ideally this would be an automatic
+# feature of any exported target.
 
 . ./defs || Exit 1
 
