@@ -1,5 +1,14 @@
 2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: add excerpts from few original bug reports, for clarity.
+	* tests/comment6.test: Add excerpts and/or details from the
+	original bug report that prompted this tests to be added and/or
+	extended.
+	* tests/dejagnu4.test: Likewise.
+	* tests/installdir.test: Likewise.
+
+2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests defs: allow requirements for compilers (mostly dummy)
 	Most of the new requirements that are now accepted in `$required'
 	as consequence of this patch are still dummy.  They are planned
